crates/lingui_macro/tests/snapshots/jsx__jsx_should_suppor_legacy_import.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/macro";
const exp2 = <Trans>Refresh inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const exp2 = <Trans_ {.../*i18n*/ {
    id: "EsCV2T",
    message: "Refresh inbox"
}}/>;
