crates/lingui_macro/tests/snapshots/jsx__jsx_simple_jsx.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
const exp1 = <Custom>Refresh inbox</Custom>;
const exp2 = <Trans>Refresh inbox</Trans>;
const exp3 = <div><Trans>Refresh inbox</Trans></div>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const exp1 = <Custom>Refresh inbox</Custom>;
const exp2 = <Trans_ {.../*i18n*/ {
    id: "EsCV2T",
    message: "Refresh inbox"
}}/>;
const exp3 = <div><Trans_ {.../*i18n*/ {
    id: "EsCV2T",
    message: "Refresh inbox"
}}/></div>;
