crates/lingui_macro/tests/snapshots/jsx__jsx_values_dedup.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
   Hello {foo} and {foo}{" "}
   {bar}
 </Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "LyhmWJ",
    values: {
        foo: foo,
        bar: bar
    },
    message: "Hello {foo} and {foo} {bar}"
}}/>;
